--- a/Proyecto_IIUnidad/Vista4/Vista4.csproj
+++ b/Proyecto_IIUnidad/Vista4/Vista4.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.31" />
+    <PackageReference Include="Syncfusion.Tools.Windows" Version="20.3.0.47" />
   </ItemGroup>
 
   <ItemGroup>
